<resources>
    <string name="app_name">aspreFORHER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="building_a_community_as_a_young_woman_in_a_country_poised_on_a_unique_growth_opportunity_you_have_a_chance_to_make_a_difference_aspire_for_her_will_provide_access_to_a_peer_community_and_information_and_guidance_on_career_choices">Building a Community As a young woman in a country poised on a unique growth opportunity, you have a chance to make a difference. Aspire for Her will provide access to a peer community and information and guidance on career choices</string>
    <string name="change_makers">Change Makers</string>
    <string name="aspire_for_her_will_partner_with_forward_thinking_organisations_and_institutions_to_create_a_power_packed_eco_system_for_you_offering_world_class_courses_learning_opportunities_workshops_summits_and_conferences_watch_this_space_for_more">Aspire for Her will partner with forward thinking organisations and institutions to create a power-packed eco-system for you – offering world-class courses, learning opportunities, workshops, summits and conferences. Watch this space for more!</string>
    <string name="mentors">Mentors</string>
    <string name="at_aspire_for_her_a_rich_network_of_women_leaders_and_role_models_will_be_your_guides_as_you_navigate_through_your_career_options_whether_your_area_of_passion_is_technology_or_finance_established_brands_or_hot_start_ups_the_arts_or_social_enterprise_you_will_find_a_mentor_who_has_walked_the_path_and_is_ready_to_guide_you">At Aspire for Her, a rich network of women leaders and role models will be your guides as you navigate through your career options. Whether your area of passion is technology or finance; established brands or hot start-ups; the arts or social enterprise, you will find a mentor who has walked the path and is ready to guide you.</string>
    <string name="member">Member</string>
    <string name="aspire_for_her_foundation_is_a_not_for_profit_section_8_company_powered_by_extraordinary_women_leaders_as_mentors_and_role_models_aspire_for_her_foundation_primarily_works_on_a_c2b_college_to_business_model_creating_online_and_offline_programs_for_its_members_18_25_year_old_women_through_partnerships_with_forward_thinking_diversity_focused_organisations_and_professionals">Aspire for Her Foundation is a not-for-profit (Section 8) company powered by extraordinary women leaders as mentors and role models. Aspire for Her Foundation primarily works on a C2B (College-to-Business) model creating online and offline programs for its members (18-25 year old women) through partnerships with forward-thinking, diversity-focused organisations and professionals.</string>
    <string name="a_woman_is_the_full_circle_within_her_is_the_power_to_create_nurture_and_transform">A woman is the full circle. Within her is the power to create, nurture and transform</string>
</resources>